# infomcpd

./: .gitignore  Planning  README.md
grammar/: Makefile  grammar.tex
impl/: AST.hs  Dynamic.hs  Main.hs  Parser.hs  README.txt  Regex.hs  Static.hs  impl.cabal  sedtris.sh
impl-pl/: main.pl
impl-pl/pl2r/: AST.hs  Display.hs  Main.hs  Parser.hs  Process.hs  Prolog.hs  Rules.hs  ToRules.hs  pl2r.cabal  prologue.tex
impl/tests/: head.sed  subst.sed  tac.sed  tail.sed  wc-l.sed
semantics/: static.tex
tests/: charcount.sed
