name:          impl
version:       0.1.0
cabal-version: >= 1.10
build-type:    Simple
license:       MIT
author:        Lars Folkersma, Paul van Grol, Mark Leenen, Matej Milinkovic, Ivo Muusse, Tom Smeding

executable            impl
    hs-source-dirs:   .
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -Wall -O3
    build-depends:    base >= 4 && < 5, containers
